[tool.mypy]
exclude = ["build", "setup.py"]


dev-dependencies = ["mypy>=1.8.0", "pytest>=7.2.0"]

[tool.uv]
prerelease = "allow"


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


# [tool.hatch.version]
# source = "vcs"

[tool.hatch.build.hooks.custom]
path = "generate_version.py"
class = "VersionHook"
# pre-build = "uv run python generate_version.py"

[tool.hatch.metadata]
dynamic=["version"]

[tool.hatch.version]
path = "photonlibpy/version.py"
pattern = '^PHOTONLIB_VERSION = "(.*?)"$'

[project]
name = "photonlibpy"
version = "0.1.0"
description = "Pure-python implementation of PhotonLib for interfacing with PhotonVision on coprocessors."
readme = "README.md"
authors = [{ name = "Photonvision Development Team" }]
urls = { homepage = "https://photonvision.org" }
requires-python = ">=3.12"
dependencies = [
    "numpy~=2.1",
    "wpilib<2026,>=2025.0.0b1",
    "robotpy-wpimath<2026,>=2025.0.0b1",
    "robotpy-apriltag<2026,>=2025.0.0b1",
    "robotpy-cscore<2026,>=2025.0.0b1",
    "pyntcore<2026,>=2025.0.0b1",
    "opencv-python;platform_machine!='roborio'",
]
